welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (n==93 || n==90 || n==110 || n=191) { 
                                     ^